--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/three": "^0.149.0",
+    "axios": "^1.3.3",
     "drei": "^2.2.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
